--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,21 @@ body {
  
 }
 
+
+
 h1{
   color: white;
   
+}
+
+#wheel {
+  width: 150px;
+  height: 150px;
+  background-color: #fff;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+
 }
