--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,28 @@ h1{
   top: 50%;
   left: 50%;
   transform: translate(-50% , -50%);
+  animation: wheelAnimation 10s 1s;
+  
 
 }
 
 .rotate {
-  transform: rotate(45deg);
+  transform: rotate(0);
+  background-color: aqua;
+  
+}
+
+@keyframes wheelAnimation {
+  0%{
+    transform: rotate(0deg);
+
+  }
+
+  100%{
+    transform: rotate(360deg);
+
+  }
+  
 }
 
 
