--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ h1{
   height: 200px;
   background-image: url(../src/img/kolo.PNG);
   background-position: center;
-  border-radius: 80px;
+  border-radius: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
